# AlienVox

./: .gitattributes  .gitignore  3P.md  LICENSE  README.md  SKILLS
.agents/: AGENT.md  AGENTS.md  README.md
.githooks/: agent-trailers.sh  commit-msg  pre-commit  prepare-commit-msg  scan-secrets-pii.sh
.github/workflows/: build-windows-release.yml
docs/: AlienVox_Technical_Requirements.md  SOTA_models.md  cross_platform_guide.md  docstts_technology_options.md  how-to-msp.md  problem.md  tts_technology_options.md
docs/adr/: adr-001.md  adr-002-tauri-production-build.md  adr-003-windows-deployment-and-path-resolution.md  adr-004-tts-stack-architecture.md
docs/issues/: issue_001.md  issue_002.md  todo_001.md
gemini_poc/: .gitignore  Cargo.toml  README.md  alienvox_prototypeCargo.toml  alienvox_prototypesrcaudioaudio_win.rs  alienvox_prototypesrccapturecapture_mac.rs  alienvox_prototypesrcmain.rs  build.rs  requirements.txt  run.py  setup.py
gemini_poc/docs/adr/: adr-001.md  adr-002-tauri-production-build.md  adr-003-windows-deployment-and-path-resolution.md  adr-004-tts-stack-architecture.md
gemini_poc/docs/issues/: issue_001.md
gemini_poc/frontend/: about.html  index.html  package.json
gemini_poc/src/: main.rs
gemini_poc/src-tauri/: Cargo.toml  tauri.conf.json
gemini_poc/src-tauri/dev/: dia_tts.py  install_ml_model.py  kokoro_tts.py  kokoro_worker.py  piper_tts.py  vibevoice_tts.py
gemini_poc/src-tauri/src/: about.rs  config.rs  main.rs  paths.rs  telemetry.rs
gemini_poc/src-tauri/src/audio/: audio_win.rs  mod.rs
gemini_poc/src-tauri/src/capture/: capture_mac.rs  capture_win.rs  mod.rs
gemini_poc/src-tauri/src/engines/: ml.rs  mod.rs
gemini_poc/src-tauri/src/platform/: main_mac.rs  main_win.rs  mod.rs
gemini_poc/src/audio/: audio_mac.rs  audio_win.rs
gemini_poc/src/capture/: capture_win.rs
gemini_poc/src/platform/: main_win.rs
python_app/: .env.template  .gitignore  platform.yaml.example  pyproject.toml  requirements.txt  run.py  setup.py  stacks.yaml  version.yaml
python_app/docs/: todo_000.md  tts_technology_options.md
python_app/install/: README.md  install.bat  install_ml.bat  requirements-base.txt  requirements-ml.txt
python_app/src/: about.py  app_controller.py  app_state.py  audio_exporter.py  audio_player.py  capture.py  config.py  device.py  export_dialog.py  health.py  install_dialog.py  logger.py  main.py  main_window.py  preferences.py  single_instance.py  telemetry.py  tray.py  version.py
python_app/tests/: conftest.py  test_app_controller.py  test_app_state.py  test_capture.py  test_chatterbox.py  test_config.py  test_device.py  test_dia.py  test_f5tts.py  test_hotkey.py  test_kokoro.py  test_logger.py  test_main.py  test_main_window.py  test_manage_voices_dialog.py  test_outetts.py  test_perf.py  test_piper.py  (+6 more)
(+58 files in other folders)
