[package]
name = "alienvox-tauri"
version = "0.1.0"
description = "AlienVox TTS Desktop Application"
authors = ["AlienTech.Software"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }
windows-sys = { version = "0.52", features = ["Win32_Speech"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
