[package]
name = "alienvox-tauri"
version = "0.1.0"
description = "AlienVox TTS Desktop Application"
authors = ["AlienTech.Software"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
