[package]
name = "alienvox"
version = "0.1.0"
description = "AlienVox TTS Desktop Application — Single Binary (Tauri + Win32)"
authors = ["AlienTech.Software"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
windows = { version = "0.62.2", features = ["Win32_Media_Speech", "Win32_System_Com", "Win32_Foundation", "Win32_Globalization"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_DataExchange",
    "Win32_Media_Audio",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
